Revert changes to SQLText… because the break everything!